@@ -1,23 +1,0 @@
-/*
- * dump-java.h --
- *
- *      Operations to dump Java class templates from MIB module information.
- *
- * Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
- *
- * See the file "COPYING" for information on usage and redistribution
- * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
- *
- * @(#) $Id$
- */
-
-#ifndef _DUMP_JAVA_H
-#define _DUMP_JAVA_H
-
-
-
-extern int dumpJava(const char *modulename);
-
-
-
-#endif /* _DUMP_JAVA_H */
